--- a/tile-weather-app/src/components/ForecastContainer/ForecastElement/ForecastElement.css
+++ b/tile-weather-app/src/components/ForecastContainer/ForecastElement/ForecastElement.css
@@ -1,7 +1,7 @@
 .week-list {
 	list-style-type: none;
 	padding: 0;
-	margin: 10px 35px;
+	margin: 10px 17px;
 	-webkit-box-shadow: 0 0 50px -5px rgba(0, 0, 0, 0.25);
 	        box-shadow: 0 0 50px -5px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
@@ -19,8 +19,6 @@
 	transition: 200ms ease;
 	border-radius: 10px;
 }
-
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700,900&display=swap');
 
 .week-list > li:hover {
 	-webkit-transform: scale(1.1);
@@ -56,6 +54,11 @@
 	text-align: center;
 	margin: 10px 0 0 0;
 	font-weight: 700;
+}
+
+.week-list .svg-inline--fa.weather-icon {
+  width: 35px;
+  height: 35px;
 }
 
 .celsius:after {
